@@ -23,6 +23,7 @@ TODO :
 	added lock and tls multithread API to neko.h
 	std : added date_get_tz()
 	mod_neko : added log_message
+	regexp : fix for unmatched optional groups, return null instead of empty string
 
 2008-03-16 : 1.7.0
 	nekoc : allow binary ast format with -p, don't allow inline nxml
